--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
-  "name": "mykotto",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "mykotto",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node server/server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^3.0.0",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.3",
+        "express-fileupload": "^0.4.0",
+        "google-auth-library": "^1.6.1",
+        "jsonwebtoken": "^8.3.0",
+        "mongoose": "^5.2.3",
+        "mongoose-unique-validator": "^2.0.1",
+        "save": "^2.3.2",
+        "underscore": "^1.9.1"
+    }
 }
