--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "body-parser": "^1.18.3",
         "express": "^4.16.3",
         "express-fileupload": "^0.4.0",
-        "google-auth-library": "^1.6.1",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.3",
+        "mongoose-auto-increment": "^5.0.1",
+        "mongoose-paginate": "^5.0.3",
         "mongoose-unique-validator": "^2.0.1",
+        "node-static": "^0.7.10",
         "save": "^2.3.2",
         "underscore": "^1.9.1"
     }
